--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:test
+    url: jdbc:h2:file:D:/test
     driver-class-name: org.h2.Driver
     username: sa
-    password: password
+    password:
   jpa:
     hibernate:
       ddl-auto: update
